feat: Drizzle ORM + MySQL 데이터베이스 연동 추가
- Drizzle ORM으로 MySQL 데이터베이스 스키마 구성 (categories, posts, sync_logs)
- Docker Compose로 로컬 MySQL 환경 설정
- GitHub 데이터를 DB에 동기화하는 스크립트 및 API 엔드포인트 추가
- DB 사용 시 GitHub API 호출 없이 빠른 페이지 로딩 가능
- DATABASE_URL이 없으면 기존 GitHub API 방식으로 폴백

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,10 @@ GITHUB_TOKEN=your_github_token_here
 # GitHub repository information
 GITHUB_OWNER=jon890
 GITHUB_REPO=fos-study
+
+# MySQL Database URL (Docker Compose 사용 시)
+# Format: mysql://user:password@host:port/database
+DATABASE_URL=mysql://fos_user:fos_password@localhost:3306/fos_blog
+
+# Sync API Key (optional, for securing the sync endpoint)
+SYNC_API_KEY=your_random_api_key_here
