--- a/package.json
+++ b/package.json
@@ -6,12 +6,24 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio",
+    "db:up": "docker compose up -d",
+    "db:down": "docker compose down",
+    "db:logs": "docker compose logs -f db",
+    "sync": "dotenv -e .env.local -- tsx scripts/sync.ts",
+    "setup": "docker compose up -d && sleep 5 && pnpm db:push && pnpm sync"
   },
   "dependencies": {
     "@octokit/rest": "^21.0.0",
+    "dotenv": "^17.2.3",
+    "drizzle-orm": "^0.45.1",
     "highlight.js": "^11.11.1",
     "lucide-react": "^0.469.0",
+    "mysql2": "^3.16.2",
     "next": "^16.1.6",
     "next-themes": "^0.4.4",
     "react": "^19.2.0",
@@ -27,9 +39,12 @@
     "@types/node": "^22.10.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "dotenv-cli": "^11.0.0",
+    "drizzle-kit": "^0.31.8",
     "eslint": "^9.17.0",
     "eslint-config-next": "^16.1.6",
     "tailwindcss": "^4.0.0",
+    "tsx": "^4.21.0",
     "typescript": "^5.7.0"
   },
   "packageManager": "pnpm@9.15.0"
