fix: ESLint 9 flat config 설정
- next lint 대신 eslint . 사용
- ESLint 9 flat config로 마이그레이션
- TypeScript, React, React Hooks 플러그인 추가

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint .",
     "type-check": "tsc --noEmit",
     "test": "echo \"No tests yet\" && exit 0",
     "db:generate": "drizzle-kit generate",
@@ -36,6 +36,8 @@
     "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.3",
+    "@eslint/js": "^9.39.2",
     "@tailwindcss/postcss": "^4.0.0",
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^22.10.0",
@@ -45,9 +47,12 @@
     "drizzle-kit": "^0.31.8",
     "eslint": "^9.17.0",
     "eslint-config-next": "^16.1.6",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "tailwindcss": "^4.0.0",
     "tsx": "^4.21.0",
-    "typescript": "^5.7.0"
+    "typescript": "^5.7.0",
+    "typescript-eslint": "^8.54.0"
   },
   "packageManager": "pnpm@9.15.0"
 }
