feat: SEO 최적화 및 Google AdSense 통합
SEO 개선:
- robots.txt 자동 생성
- sitemap.xml 동적 생성 (모든 페이지 포함)
- Open Graph 및 Twitter Card 메타 태그
- JSON-LD 구조화 데이터 (Article, Breadcrumb)
- Google Search Console 인증 지원

Google AdSense:
- 환경변수로 AdSense ID 설정
- 자동 광고 스크립트 삽입

환경변수:
- NEXT_PUBLIC_SITE_URL: 사이트 URL
- NEXT_PUBLIC_GOOGLE_SITE_VERIFICATION: Search Console 인증
- NEXT_PUBLIC_GOOGLE_ADSENSE_ID: AdSense Publisher ID

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,14 @@ DATABASE_URL=mysql://fos_user:fos_password@localhost:3306/fos_blog
 
 # Sync API Key (optional, for securing the sync endpoint)
 SYNC_API_KEY=your_random_api_key_here
+
+# Site URL (for SEO, sitemap, and canonical URLs)
+NEXT_PUBLIC_SITE_URL=https://your-domain.com
+
+# Google Search Console verification code
+# Get this from: https://search.google.com/search-console
+NEXT_PUBLIC_GOOGLE_SITE_VERIFICATION=your_verification_code_here
+
+# Google AdSense Publisher ID (ca-pub-XXXXXXXXXXXXXXXX)
+# Get this from: https://www.google.com/adsense
+NEXT_PUBLIC_GOOGLE_ADSENSE_ID=ca-pub-XXXXXXXXXXXXXXXX
