--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@octokit/rest": "^21.0.0",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
+    "github-slugger": "^2.0.0",
     "highlight.js": "^11.11.1",
     "lucide-react": "^0.469.0",
     "mysql2": "^3.16.2",
@@ -33,6 +34,7 @@
     "react-markdown": "^9.0.1",
     "rehype-highlight": "^7.0.0",
     "rehype-raw": "^7.0.0",
+    "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
