feat: MySQL FULLTEXT 검색으로 성능 향상
- FULLTEXT 인덱스 추가 스크립트 생성
- MATCH AGAINST 사용하여 관련도 기반 정렬
- Boolean 모드로 부분 일치 검색 지원
- FULLTEXT 실패 시 LIKE 검색으로 fallback

--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "db:up": "docker compose up -d",
     "db:down": "docker compose down",
     "db:logs": "docker compose logs -f db",
+    "db:fulltext": "dotenv -e .env.local -- tsx scripts/add-fulltext-index.ts",
     "sync": "dotenv -e .env.local -- tsx scripts/sync.ts",
-    "setup": "docker compose up -d && sleep 5 && pnpm db:push && pnpm sync"
+    "setup": "docker compose up -d && sleep 5 && pnpm db:push && pnpm sync && pnpm db:fulltext"
   },
   "dependencies": {
     "@octokit/rest": "^21.0.0",
